Fix overflow issue for lengthy titles.

--- a/TheatreCMS3/Content/Areas/Prod.css
+++ b/TheatreCMS3/Content/Areas/Prod.css
@@ -76,6 +76,10 @@
 	opacity: 1;
 }
 
+.Production--cardTitle {
+	height: 40px;
+}
+
 /* END PRODUCTIONS INDEX PAGE */
 
 
